--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="./public/img/contact-1.webp" />
+    <link rel="icon" type="image/webp" href="./public/img/favicon.png" className="rounded-3xl"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Awwwards</title>
+    <title>Zentry</title>
   </head>
   <body>
     <div id="root"></div>
